# pixie

./: .arcconfig  .arclint  .arcunit  .bazel_fix_commands.json  .bazelignore  .bazelproject  .bazelrc  .clang-format  .clang-tidy  .flake8rc  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .graphqlconfig  .groovylintrc.json  .pxl.flake8rc  .snyk  .travis.yml  .yamllint  ADOPTERS.md  AUTHORS  BUILD  BUILD.bazel  CLA.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Doxyfile  GOVERNANCE.md  Jenkinsfile  LICENSE  MAINTAINERS  Makefile  OWNERS  README.md  SECURITY.md  (+14 more)
bazel/: BUILD.bazel  cc_configure.bzl  cc_resource.bzl  cc_wrapper.py  container_images.bzl  flex_bison.bzl  gcs.bzl  get_workspace_status  get_workspace_status.sh  go_container.bzl  go_image_alias.bzl  gogo.bzl  graal.bzl  grpc_web.bzl  images.bzl  kustomize.bzl  licenses.bzl  linux_headers.bzl  llvm_cmake.bzl  local_cc.bzl  netty.bzl  pl_bpf_preprocess.bzl  pl_build_system.bzl  pl_qemu_kernels.bzl  pl_workspace.bzl  proto_compile.bzl  repositories.bzl  repository_locations.bzl  thrift.bzl  toolchain_transitions.bzl  ui.bzl
bazel/cc_toolchains/: BUILD.bazel  clang.bzl  deps.bzl  gcc.bzl  llvm_libs.bzl  settings.bzl  toolchain_features.bzl  toolchains.bzl  unix_cc_toolchain_config.patch  utils.bzl
bazel/cc_toolchains/clang/: libcxx.BUILD  toolchain.BUILD  toolchain_files.BUILD
bazel/cc_toolchains/sysroots/: BUILD.bazel  images.bzl  sandbox.bazelrc  sysroots.bzl
bazel/graal/: BUILD.bazel  rules.bzl  toolchain.bzl
bazel/test_runners/: BUILD.bazel
bazel/test_runners/qemu_with_kernel/: BUILD.bazel  create_sysroot_disk.sh  hostname  init  interactive_runner.sh  launcher.sh  run_qemu.sh  run_sshd.sh  runner.bzl  test_runner_inside_qemu.sh
bazel/test_runners/sysroot_chroot/: BUILD.bazel  chroot.sh  runner.bzl  setup_unshare.sh
demos/: .gitignore  BUILD.bazel  Makefile  README.md  demo_upload.bzl  manifest.json
demos/applications/: README.md
demos/applications/hipster_shop/: BUILD.bazel  README.md  loadgenerator.yaml  reflection.cc  reflection.h  reflection_test.cc
demos/applications/online-boutique/: online-boutique.yaml
demos/applications/sharelatex/: README.md
demos/applications/sock-shop/: sock-shop-loadgen.yaml  sock-shop.yaml
demos/applications/sockshop/: README.md  carts-dep.yaml  orders-dep.yaml  (+5 more)
demos/client_server_apps/: README.md
demos/finagle/: LICENSE  finagle.yaml
demos/kafka/: LICENSE  kafka.yaml
demos/load_generation/: BUILD.bazel  Dockerfile  README.md  build_docker.sh  generate_load.go  loadgen.sh  locustuser.tmpl  requirements.txt
demos/mongodb/: mongodb.yaml
demos/online-boutique/: LICENSE.txt  online-boutique.yaml
demos/simple-gotracing/: .gitignore  Readme.md  app.go  capture_args.pxl  go.mod  go.sum  k8s_manifest.yaml
demos/slack-alert-app/: README.md  requirements.txt  slackbot.py
demos/sock-shop/: LICENSE.txt  sock-shop-loadgen.yaml  sock-shop.yaml
docs/customer/: .arcconfig  .arclint  .eslintrc.json  BUILD.bazel  LICENSE  README.md  config.js  default.conf  gatsby-config.js  gatsby-node.js  lint.sh  netlify.toml  netlify_passwd_header  package.json  service.skfld.tmpl  tslint.json
experimental/delve_connector/: BUILD.bazel  README.md  client.cc  dlv_driver.cc  dlv_driver.h
experimental/http_echo/: BUILD.bazel  main.go
experimental/protobufs/: BUILD.bazel  aliasing.cc  aliasing.h  aliasing_finder.cc  aliasing_test.cc  plot.py  type_database.cc  type_database.h
k8s/: BUILD.bazel  README.md
k8s/cloud/: BUILD.bazel  kustomization.yaml
k8s/cloud_deps/: BUILD.bazel  kustomization.yaml
k8s/customer_docs/: kustomization.yaml
k8s/grafana_demo/: README.md  grafana-config.yaml  grafana-dashboardSources.yaml  grafana-datasources.yaml  grafana-deployment.yaml  grafana-ingress.yaml  grafana-pvc.yaml  grafana-service.yaml
k8s/operator/: BUILD.bazel
k8s/slackin/: README.md  config.yaml  deployment.yaml  ingress.yaml  ingress_no_tls.yaml  kustomization.yaml  service.yaml
k8s/vizier/: BUILD.bazel  README.md  images.bzl  kustomization.yaml
k8s/vizier_bootstrap/: BUILD.bazel  kustomization.yaml
k8s/vizier_deps/: BUILD.bazel
platform-dependent/smoke-test/: BUILD.bazel  Dockerfile  README.md  instructions.md  main.go  run_smoke_test.sh
primitive-agent/bcc_agent/: BUILD.bazel  CPUDistribution.cc
primitive-agent/controller/: BUILD.bazel  controller.go
services/api_service/: BUILD.bazel  api_service.go
services/auth/: BUILD.bazel  auth_server.go  service.skfld.tmpl  service.tmpl  service_dev.yaml  service_prod.yaml
services/common/: BUILD.bazel  env.go  env_test.go  grpc_server.go  grpc_server_test.go  http_middleware.go  logging.go  server.go  service_flags.go
services/gateway/: BUILD.bazel  gateway_server.go  middleware.go  service.skfld.tmpl  service.tmpl
services/proxy/: BUILD.bazel  default.conf  service.skfld.tmpl  service.tmpl  service_dev.yaml  service_prod.yaml
src/agent/: BUILD.bazel  agent.cc  agent.skfld.tmpl  agent.yaml  throwaway_dummy_data.cc
src/api/: .gitignore  BUILD.bazel  README.md  copy_to_public_repo.sh  prepend_licenses.py
src/benchmarks/: BUILD.bazel  map_benchmark.cc  pb_parsing_benchmark.cc  regex_benchmark.cc
src/carnot/: BUILD.bazel  blocking_agg_benchmark.cc  carnot.cc  carnot.h  carnot_executable.cc  carnot_test.cc  end_to_end_join_test.cc  engine_state.h
src/common/: BUILD.bazel  base.h  common.h  const_str.h  elapsed_timer.h  env.cc  env.h  error.h  error_strings.cc  error_strings.h  error_test.cc  macros.h  obj_tools.h  object_pool.h  object_pool_test.cc  scoped_timer.h  scoped_timer_test.cc  status.cc  status.h  status_test.cc  statusor.h  statusor_test.cc  time.h  time_test.cc  type_utils.h  utils.h  uuid_utils.h  uuid_utils_test.cc
throwaway/: BUILD.bazel  adder-test.cc  adder.cc  adder.h  cnats.cc  concurrentqueue.cc  cpp_taskflow_test.cc  farmhash_test.cc  flags.cc  hello.go  hello_arrow.cc  hello_bcc.cc  libcuckoo_test.cc  pypa_demo.cc  resource.cc  sample-benchmark.cc  sole_test.cc  test_data.csv
throwaway/cc-grpc-service/: BUILD.bazel  main.cc
(+8901 files in other folders)
