# Copyright 2018- The Pixie Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@px//demos:demo_upload.bzl", "demo_upload")

pkg_tar(
    name = "px-kafka",
    srcs = glob(["kafka/*"]),
    extension = "tar.gz",
    strip_prefix = "kafka",
)

pkg_tar(
    name = "px-sock-shop",
    srcs = glob(["sock-shop/*"]),
    extension = "tar.gz",
    strip_prefix = "sock-shop",
)

pkg_tar(
    name = "px-online-boutique",
    srcs = glob(["online-boutique/*"]),
    extension = "tar.gz",
    strip_prefix = "online-boutique",
)

ARCHIVES = [
    ":px-kafka",
    ":px-sock-shop",
    ":px-online-boutique",
]

demo_upload(
    name = "upload_dev_demo",
    archives = ARCHIVES,
    bucket = "gs://pl-infra-dev-artifacts/dev-demo-apps",
    manifest = "manifest.json",
)

demo_upload(
    name = "upload_prod_demo",
    archives = ARCHIVES,
    bucket = "gs://pixie-prod-artifacts/prod-demo-apps",
    manifest = "manifest.json",
)
